// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ABI value serialization round-trips nested form values through Cell and BoC 1`] = `
{
  "boc": "b5ee9c7241010101003500006500000007c00000000000000000000000000000000000000000000000000000000000000000044a817c80200000054000000c7048b94bef",
  "decoded": {
    "$": "NestedStruct",
    "counterAlias": "99",
    "summary": {
      "$": "ScalarFields",
      "count": "7",
      "enabled": true,
      "maybeAddress": null,
      "maybeCount": "42",
      "recipient": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
      "tonAmount": "1250000000",
    },
  },
}
`;

exports[`ABI value serialization round-trips dictionaries with numeric keys and coins values 1`] = `
{
  "boc": "b5ee9c7241010401001a000101c0010203cec00203000b650ee6b28020000bf20773594040d1f0d12b",
  "decoded": {
    "1": "1000000000",
    "7": "250000000",
  },
}
`;

exports[`ABI value serialization round-trips nested collections with struct values 1`] = `
{
  "boc": "b5ee9c7241010501005100030501c070040102010da00000000101c00401016003010da00000000701c004005d00000003e00000000000000000000000000000000000000000000000000000000000000000022540be4010000002a8731a6238",
  "decoded": {
    "$": "ComplexCollections",
    "nestedBatches": [
      {
        "7": [
          {
            "$": "ScalarFields",
            "count": "7",
            "enabled": true,
            "maybeAddress": null,
            "maybeCount": "42",
            "recipient": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
            "tonAmount": "1250000000",
          },
        ],
      },
    ],
    "records": [
      {
        "$": "ScalarFields",
        "count": "7",
        "enabled": true,
        "maybeAddress": null,
        "maybeCount": "42",
        "recipient": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
        "tonAmount": "1250000000",
      },
    ],
    "recordsByBatch": {
      "1": [
        {
          "$": "ScalarFields",
          "count": "7",
          "enabled": true,
          "maybeAddress": null,
          "maybeCount": "42",
          "recipient": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
          "tonAmount": "1250000000",
        },
      ],
    },
  },
}
`;

exports[`ABI value serialization formats TON runtime values as JSON-safe form values 1`] = `
{
  "address": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
  "builder": "b5ee9c72410101010003000002ab4e791e7a",
  "cell": "b5ee9c72410101010003000002ab4e791e7a",
  "dictionary": {
    "7": "1024",
  },
  "integer": "42",
  "slice": "b5ee9c72410101010003000002ab4e791e7a",
}
`;

exports[`ABI value serialization round-trips external and addr_none address values 1`] = `
{
  "external": "External<8:0>",
  "externalBoc": "b5ee9c7241010101000500000541001021550755",
  "none": "none",
  "noneBoc": "b5ee9c724101010100030000012094418655",
}
`;

exports[`ABI value serialization validates address kinds without rewriting the input 1`] = `
{
  "external": true,
  "externalAsInternal": false,
  "internal": true,
  "invalidExternalWidth": false,
  "noneAsAny": true,
  "noneAsInternal": false,
}
`;

exports[`ABI value serialization creates a serializable zero-filled default for fixed-width bits 1`] = `
{
  "boc": "b5ee9c724101010100420000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010f06c53",
  "decoded": "b5ee9c724101010100420000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010f06c53",
  "sample": "b5ee9c724101010100420000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010f06c53",
  "sampleBits": 512,
  "sampleRefs": 0,
}
`;
